Backdrop-filter issue on iOS fixed.

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ header {
     align-items: center;
 
     max-width: 90vw;
+    margin-top: 0.5rem;
     margin-bottom: 1rem;
 }
 
@@ -361,21 +362,10 @@ header {
 
     border-radius: 0.9em;
     background: rgba(87, 87, 87, 0.20);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
     pointer-events: none;
     transform: translateZ(20px);
     animation: fadeBlur 3s ease-in-out infinite alternate;
 }
-
-/* .blur-effect {
-    border-radius: 0.9em;
-    background: rgba(87, 87, 87, 0.20);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    pointer-events: none;
-    animation: fadeBlur 3s ease-in-out infinite alternate;
-} */
 
 @keyframes fadeBlur {
     0% {
